[tool.poetry]
name = "fastapi-langgraph"
version = "0.1.0"
description = ""
authors = ["afzalfaizi <afzaalm993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlmodel = "^0.0.22"
langchain = "^0.3.10"
langchain-core = "^0.3.22"
langchain-google-genai = "^2.0.6"
langgraph = "^0.2.56"
python-multipart = "^0.0.19"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
